// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetsManager reducer sould handle EXCHANGE_EXCHANGES_LIST_GETTING_FINISH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": true,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "test": Immutable.Record {
        "id": null,
        "timestamp": null,
        "isFetching": false,
        "isFetched": false,
        "transactionHash": null,
        "isPending": false,
        "isFailed": false,
        "owner": null,
        "buyPrice": "0",
        "sellPrice": "0",
        "assetBalance": "0",
        "ethBalance": "0",
        "symbol": null,
        "address": "test",
        "authorizedManager": null,
        "isActive": true,
      },
    },
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 1,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_EXCHANGES_LIST_GETTING_START 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": true,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_DATA_FINISH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": true,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [
    "TIME",
  ],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_DATA_START 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": true,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_ORDERS_FINISH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": true,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      null: Immutable.Record {
        "id": null,
        "timestamp": null,
        "isFetching": false,
        "isFetched": false,
        "transactionHash": null,
        "isPending": false,
        "isFailed": false,
        "owner": null,
        "buyPrice": "0",
        "sellPrice": "0",
        "assetBalance": "0",
        "ethBalance": "0",
        "symbol": null,
        "address": null,
        "authorizedManager": null,
        "isActive": true,
      },
    },
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": [Function],
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_ORDERS_START 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": true,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_OWNERS_EXCHANGES_FINISH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": true,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_OWNERS_EXCHANGES_START 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": true,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_TOKENS_LIST_FINISH 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": true,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      null: Immutable.Record {
        "id": null,
        "timestamp": null,
        "isFetching": false,
        "isFetched": false,
        "transactionHash": null,
        "isPending": false,
        "isFailed": false,
        "dao": null,
        "address": null,
        "decimals": null,
        "name": null,
        "symbol": null,
        "balance": "0",
        "allowance": Immutable.Map {},
        "url": null,
        "icon": null,
        "fee": null,
        "withFee": null,
        "platform": null,
        "totalSupply": "0",
        "managersList": null,
        "isReissuable": null,
        "isOptional": true,
        "feeAddress": null,
      },
    },
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_TOKENS_LIST_START 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": true,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_MIDDLEWARE_DISCONNECTED 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": true,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": false,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_REMOVE_FOR_OWNER 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_SET_FILTER 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {
    "symbol": "TIME",
  },
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_SET_PAGES_COUNT 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 1,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_UPDATE 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "test": Immutable.Record {
        "id": null,
        "timestamp": null,
        "isFetching": false,
        "isFetched": false,
        "transactionHash": null,
        "isPending": false,
        "isFailed": false,
        "owner": null,
        "buyPrice": "0",
        "sellPrice": "0",
        "assetBalance": "0",
        "ethBalance": "0",
        "symbol": null,
        "address": "test",
        "authorizedManager": null,
        "isActive": true,
      },
    },
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {
      "test": Immutable.Record {
        "id": null,
        "timestamp": null,
        "isFetching": false,
        "isFetched": false,
        "transactionHash": null,
        "isPending": false,
        "isFailed": false,
        "owner": null,
        "buyPrice": "0",
        "sellPrice": "0",
        "assetBalance": "0",
        "ethBalance": "0",
        "symbol": null,
        "address": "test",
        "authorizedManager": null,
        "isActive": true,
      },
    },
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;

exports[`assetsManager reducer sould handle EXCHANGE_UPDATE_FOR_OWNER 1`] = `
Immutable.Record {
  "id": null,
  "timestamp": null,
  "isFetching": false,
  "isFetched": false,
  "transactionHash": null,
  "isPending": false,
  "isFailed": false,
  "exchanges": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "exchangesForOwner": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "assetSymbols": Array [],
  "filter": Immutable.Map {},
  "tokens": Immutable.Record {
    "id": null,
    "timestamp": null,
    "isFetching": false,
    "isFetched": false,
    "transactionHash": null,
    "isPending": false,
    "isFailed": false,
    "list": Immutable.Map {},
    "selected": null,
  },
  "showFilter": true,
  "lastPages": 0,
  "pagesCount": 0,
}
`;
